2005-07-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/telnetview.cpp (CTelnetView::DoPasteFromClipboard):
	Add "Auto Wrap" on paste.

2005-07-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/telnetcon.cpp (CTelnetCon::OnMainIdle):
	Little bug fix.

2005-07-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/mainframe.cpp (CMainFrame::OnURLEntryKillFocus):
	Little bug fix. We should reutrn FALSE in this handler.

2005-07-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp,
	src/emoticondlg.cpp,
	src/editfavdlg.cpp,
	src/view.cpp,
	src/prefdlg.cpp,
	src/sitedlg.cpp,
	src/mainframe.cpp,
	src/dialog.cpp,
	src/inputdialog.cpp,
	src/widget.cpp,
	src/listbox.cpp,
	src/telnetview.cpp,
	src/sitelistdlg.cpp,
	src/generalprefpage.cpp:
	Remove all C++ destructors in CWidget derived classes.
	All destruction of these classes should be done in OnDestroy() instead.

	* src/telnetcon.cpp:
	Improve multi-threading handling.

2005-07-19  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp (CTermView::~CTermView):
	Fix the bug in destructor.
	GdkCursor can be ref and unref correctly now.

	* src/mainframe.cpp (CMainFrame::NewCon):
	Rearrange the order of some operations to fix a serious bug which 
	causes frequent segmentation fault.

2005-07-19  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp:
	Exclude characters '(' and ')' from URL detection.

	* src/site.cpp,
	src/emoticondlg.cpp,
	src/editfavdlg.cpp,
	src/mainframe.cpp,
	src/inputdialog.cpp,
	src/notebook.cpp,
	src/listbox.cpp:
	Replace some char* pointers with std::string to increase reliability.

	* src/telnetcon.cpp:
	Replace the dynamic-allocated buffer with a shared static one.

2005-07-19  Kanru Chen  <koster@debian.org.tw>
	
	* src/telnetcon.cpp:
	Remove io_channel correctly.

	* src/mainframe.cpp
	(OnURLEntryKeyDown):
	Use strdup on gtk_entry_get_text according to API reference to prevent
	reentrance issue.